# dev-contracts-substrate

./: README.md
.github/workflows/: docker-image.yml
compiled/erc20/: erc20.contract  erc20.wasm  metadata.json
compiled/flipper/: flipper.contract  flipper.wasm  metadata.json
compiled/set-code-hash/: incrementer.contract  incrementer.wasm  metadata.json
compiled/set-code-hash/updated/: metadata.json  updated_incrementer.contract  updated_incrementer.wasm
example-contracts/: README.md
example-contracts/crowdfund/: Cargo.toml
example-contracts/flipper/: Cargo.toml
example-contracts/upgradeable-contracts/set-code-hash/: Cargo.toml
example-contracts/upgradeable-contracts/set-code-hash/updated-incrementer/: Cargo.toml
scripts/: run-shibuya.sh
substrate-contracts-node/: Cargo.toml  Dockerfile  README.md
substrate-contracts-node/client/consensus/manual-seal/: Cargo.toml
substrate-contracts-node/client/consensus/manual-seal/src/: lib.rs
substrate-contracts-node/node/src/: service.rs
substrate-node-contracts/: Dockerfile
verifiable-packages/ink4.0.0-alpha.3/: crowdfund.contract  flipper.contract  incrementer.contract
verifiable-packages/ink4.0.0-beta/: crowdfund.contract  flipper.contract  incrementer.contract
