[package]
name = "sc-consensus-manual-seal"
version = "0.10.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Manual sealing engine for Substrate"
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
jsonrpsee = { version = "0.15.1", features = ["server", "macros"] }
assert_matches = "1.3.0"
async-trait = "0.1.57"
codec = { package = "parity-scale-codec", version = "3.0.0" }
futures = "0.3.21"
log = "0.4.17"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
prometheus-endpoint = { git = "https://github.com/paritytech/substrate", package = "substrate-prometheus-endpoint" , branch = "polkadot-v0.9.29" }
sc-client-api = { git = "https://github.com/paritytech/substrate", package = "sc-client-api" , branch = "polkadot-v0.9.29" }
sc-consensus = { git = "https://github.com/paritytech/substrate", package = "sc-consensus" , branch = "polkadot-v0.9.29" }
sc-consensus-aura = { git = "https://github.com/paritytech/substrate", package = "sc-consensus-aura" , branch = "polkadot-v0.9.29"}
sc-consensus-babe = { git = "https://github.com/paritytech/substrate", package = "sc-consensus-babe" , branch = "polkadot-v0.9.29" }
sc-consensus-epochs = { git = "https://github.com/paritytech/substrate", package = "sc-consensus-epochs" , branch = "polkadot-v0.9.29" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", package = "sc-transaction-pool" , branch = "polkadot-v0.9.29" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/substrate", package = "sc-transaction-pool-api" , branch = "polkadot-v0.9.29" }
sp-api = { git = "https://github.com/paritytech/substrate", package = "sp-api" , branch = "polkadot-v0.9.29" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", package = "sp-blockchain" , branch = "polkadot-v0.9.29" }
sp-consensus = { git = "https://github.com/paritytech/substrate", package = "sp-consensus" , branch = "polkadot-v0.9.29" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", package = "sp-consensus-aura" , branch = "polkadot-v0.9.29" }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate", package = "sp-consensus-babe" , branch = "polkadot-v0.9.29" }
sp-consensus-slots = { git = "https://github.com/paritytech/substrate", package = "sp-consensus-slots" , branch = "polkadot-v0.9.29" }
sp-core = { git = "https://github.com/paritytech/substrate", package = "sp-core" , branch = "polkadot-v0.9.29" }
sp-inherents = { git = "https://github.com/paritytech/substrate", package = "sp-inherents" , branch = "polkadot-v0.9.29" }
sp-keystore = { git = "https://github.com/paritytech/substrate", package = "sp-keystore" , branch = "polkadot-v0.9.29" }
sp-runtime = { git = "https://github.com/paritytech/substrate", package = "sp-runtime" , branch = "polkadot-v0.9.29" }
sp-timestamp = { git = "https://github.com/paritytech/substrate", package = "sp-timestamp" , branch = "polkadot-v0.9.29" }

[dev-dependencies]
tokio = { version = "1.17.0", features = ["rt-multi-thread", "macros"] }
# sc-basic-authorship = { version = "0.10.0-dev", path = "../../basic-authorship" }
# substrate-test-runtime-client = { version = "2.0.0", path = "../../../test-utils/runtime/client" }
# substrate-test-runtime-transaction-pool = { version = "2.0.0", path = "../../../test-utils/runtime/transaction-pool" }
